--- a/public/views/api-admin-dashboard.html
+++ b/public/views/api-admin-dashboard.html
@@ -303,10 +303,10 @@
                         <th>ID</th>
                         <th>Mã KH</th>
                         <th>Tên Khách Hàng</th>
-                        <th>Email</th>
                         <th>Môi Trường</th>
                         <th>Trạng Thái</th>
-                        <th>Rate Limit (H/D)</th>
+                        <th>TG Phụ trách</th>
+                        <th>TG Groups</th>
                         <th>Ngày Tạo</th>
                     </tr>
                 </thead>
@@ -316,6 +316,6 @@
             </table>
         </div>
     </div>
-    <script src="/js/api-admin-dashboard.js?2000" defer></script>
+    <script src="/js/api-admin-dashboard.js?2001" defer></script>
 </body>
 </html>
