--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -573,10 +573,10 @@
                                     <th>ID</th>
                                     <th>Code</th>
                                     <th>Name</th>
-                                    <th>Email</th>
                                     <th>Environment</th>
                                     <th>Status</th>
-                                    <th>Rate Limit</th>
+                                    <th>TG Phụ trách</th>
+                                    <th>TG Groups</th>
                                     <th>Created</th>
                                     <th>Actions</th>
                                 </tr>
@@ -932,6 +932,6 @@
         </div>
     </div>
 
-    <script src="/js/dashboard.js?2005"></script>
+    <script src="/js/dashboard.js?2006"></script>
 </body>
 </html>
